Fixed filter button spacing

--- a/src/app/home/feature/home/home.component.scss
+++ b/src/app/home/feature/home/home.component.scss
@@ -8,4 +8,9 @@
   @include md-max {
     width: 90%;
   }
+
+  home-filter {
+    display: block;
+    padding-bottom: 2rem;
+  }
 }
